--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 
     <div class="quote-box">
         <h2>Quote of the day</h2>
-        <blockquote>Loading...</blockquote>
-        <span>Loading...</span>
+        <blockquote id="quote">Loading...</blockquote>
+        <span id="author">Loading...</span>
 
         <div>
-            <button>New Quote</button>
-            <button><img src="twitterr.png" alt="">Tweet</button>
+            <button onclick="getquote(api_url)">New Quote</button>
+            <button onclick="tweet()"><img src="twitterr.png" alt="">Tweet</button>
         </div>
     </div>
 
